--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00047.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00047.md
@@ -2,22 +2,20 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/gWHzIKGOZ7pQsNbq9GMCs48QnLW355SqvZWQJmmn_Os=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADOSKP_lJ9s-N7z6ZlR2_Iha/luontokuvat/syksy/DSC35715-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/3otGbtNITwli4lUfMlTXedpbjNs8E7p8K_SYeuxY95Y=w800)](https://lh3.googleusercontent.com/3otGbtNITwli4lUfMlTXedpbjNs8E7p8K_SYeuxY95Y=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAyqbRjtnZh5vBZhLkQQKXGa/luontokuvat/syksy/DSC34825-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACvnxHF4g5_sV7nQV2mCmlNa/luontokuvat/syksy/DSC34825.jpg)
 
-[![](https://lh3.googleusercontent.com/OgPmvWoREvk9TYpVkVAxGT1_z64eiJCnMRZR_ZqkI7U=w800)](https://lh3.googleusercontent.com/OgPmvWoREvk9TYpVkVAxGT1_z64eiJCnMRZR_ZqkI7U=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD20_cHRlrPysuzFYJd6IjVa/luontokuvat/syksy/DSC34827-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADbsVchO8C9oERFS8_K8k1Wa/luontokuvat/syksy/DSC34827.jpg)
 
-[![](https://lh3.googleusercontent.com/hrQxrOTlApFcXEfl1Af0GdP98JDxkrMwL-aJ4o5o11c=w800)](https://lh3.googleusercontent.com/hrQxrOTlApFcXEfl1Af0GdP98JDxkrMwL-aJ4o5o11c=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABbiHVG4MCq33AUwTTh2IgKa/luontokuvat/syksy/DSC34830-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA4HjTPKrAw-jRQ88Ya2IL1a/luontokuvat/syksy/DSC34830.jpg)
 
-[![](https://lh3.googleusercontent.com/bMUu1q-0EvHbO-1RE2dbWx_XpVX2MRaNgrR0wVmfD6M=w800)](https://lh3.googleusercontent.com/bMUu1q-0EvHbO-1RE2dbWx_XpVX2MRaNgrR0wVmfD6M=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACo5evi9BsjyKg8jCtsbU9Wa/luontokuvat/syksy/DSC35715-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABwl_0IEp9gLGG6vG1j9Ua6a/luontokuvat/syksy/DSC35715.jpg)
 
-[![](https://lh3.googleusercontent.com/Zr6RNg2GgAxydTDyFHhNY53UMpbjsAX_OUd7KCE3Pbo=w800)](https://lh3.googleusercontent.com/Zr6RNg2GgAxydTDyFHhNY53UMpbjsAX_OUd7KCE3Pbo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADGzGJyWkwygI48bvJ0R5Zza/luontokuvat/syksy/DSC35723-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABxxS5vOGzeWhrZm-bpeJowa/luontokuvat/syksy/DSC35723.jpg)
 
-[![](https://lh3.googleusercontent.com/mCdxb2prEMbWWcJoiKD4SiYd5dZmJd6nz3cnEsplc0g=w800)](https://lh3.googleusercontent.com/mCdxb2prEMbWWcJoiKD4SiYd5dZmJd6nz3cnEsplc0g=s0)
-
-[![](https://lh3.googleusercontent.com/gyITxDCCeiBrow22UX9A8f9_-xOEWGuNv5jVT5ha9ws=w800)](https://lh3.googleusercontent.com/gyITxDCCeiBrow22UX9A8f9_-xOEWGuNv5jVT5ha9ws=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAEVN5-HNyL7uRV2CcPTnaXa/luontokuvat/syksy/DSC35742-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADvgXj6OiVR-F7FpS0gHIR_a/luontokuvat/syksy/DSC35742.jpg)
 
 *Field sorrel*
