--- a/luontokuvat/syksy/_posts/2015-07-14-00049.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00049.md
@@ -2,14 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/4FoJi84tUgn3vrKlIzx93K09EjJ9XYEWd_MJMFme3i0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACV0HGnqdaBKIwNrnJMBRGSa/luontokuvat/syksy/DSC35746-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/vNiO2JwMp2TAIeUkitFS5PcoQtFXRH3YIb_5TGIJVT0=w800)](https://lh3.googleusercontent.com/vNiO2JwMp2TAIeUkitFS5PcoQtFXRH3YIb_5TGIJVT0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAPAAzOTzGQXRGZiGYs4JVwa/luontokuvat/syksy/DSC35746-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAiwJ1ShtCEipfqW-Th96k9a/luontokuvat/syksy/DSC35746.jpg)
 
-[![](https://lh3.googleusercontent.com/C3d1W17Zd_5D-EQJavEMGYoQVxr9cHILttdQq14IQcA=w800)](https://lh3.googleusercontent.com/C3d1W17Zd_5D-EQJavEMGYoQVxr9cHILttdQq14IQcA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABK-6C-5vD-T8Z28Yrr44X3a/luontokuvat/syksy/DSC35749-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADK1-I8VSScEJ185IbhMhrua/luontokuvat/syksy/DSC35749.jpg)
 
-[![](https://lh3.googleusercontent.com/JGaVseIVk2gpctCYNJDegc4uLPDtCrmq1Ve1vjDwVMk=w800)](https://lh3.googleusercontent.com/JGaVseIVk2gpctCYNJDegc4uLPDtCrmq1Ve1vjDwVMk=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABgL3lxeGxT43jo9QVEV-iLa/luontokuvat/syksy/DSC35754-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABiYSQdC33jiN9lE9nNedUba/luontokuvat/syksy/DSC35754.jpg)
 
 *Ahosuolaheinä*
