--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00038.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00038.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/y8ZCBm9Vz7d_At9tDsnZoL1Q6NnQpishaLEHTsJcLhw=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAEt5wKzSOpfRYg6TGmH27qa/luontokuvat/syksy/DSC15118-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/cyknHK61PAZKsFe4biiHlce0NNRGw8HLY67aExazvlo=w800)](https://lh3.googleusercontent.com/cyknHK61PAZKsFe4biiHlce0NNRGw8HLY67aExazvlo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAriq27dgA20JfzGNn7IgDwa/luontokuvat/syksy/DSC15118-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB9sNhum7IhmPm18qdzeynwa/luontokuvat/syksy/DSC15118.jpg)
