--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00040.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00040.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/1d4UkGwrGbJGcTIFiRbAR5zJObexq7m9epLWD__LUAI=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC0hLpcqjlV7AayAUXYztTRa/luontokuvat/syksy/DSC15897-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/7WS8RZ2KmrKjrryJDzQXwU5IGaT_1lp_u09PNTFpTjU=w800)](https://lh3.googleusercontent.com/7WS8RZ2KmrKjrryJDzQXwU5IGaT_1lp_u09PNTFpTjU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACZijXMaiAGwTdFXxrlR0Hga/luontokuvat/syksy/DSC15897-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACTXqB_v-jzOgqB71ZuNpyca/luontokuvat/syksy/DSC15897.jpg)
 
 *Swans*
