--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00041.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00041.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/dWtxSZIgOeCaeUMFOI3xb_I-8EuAjpftUTCG0KOpPqE=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAaoGHTY6AAhcUbfPCC6Elwa/luontokuvat/syksy/IMG_20141101_074159-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/Y7LbyzJNWV-JiFmXgEh0m2PpdHk4mcCcfXlKdZ4QRXU=w800)](https://lh3.googleusercontent.com/Y7LbyzJNWV-JiFmXgEh0m2PpdHk4mcCcfXlKdZ4QRXU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADFSvBdN2gm08jqjiMJRFu3a/luontokuvat/syksy/IMG_20141101_074214-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABf8nH1moqWc7cYmtmMvzzOa/luontokuvat/syksy/IMG_20141101_074214.jpg)
 
-[![](https://lh3.googleusercontent.com/oE8oucuQTwgpxKTWPZ0VC0_IlRB1uoAGidjrBJAp0ls=w800)](https://lh3.googleusercontent.com/oE8oucuQTwgpxKTWPZ0VC0_IlRB1uoAGidjrBJAp0ls=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABWSbh-Y3PfLxcNh7yJ-VyJa/luontokuvat/syksy/IMG_20141101_074159-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAChxLLdyDXjDjp1ODUXxoDza/luontokuvat/syksy/IMG_20141101_074159.jpg)
