--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00048.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00048.md
@@ -2,14 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/3JfqPUtLuBPL3gdeBNEDPWfGwUxCW9WQ6yCmozuj3kE=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA3m5BV4QkSXxSGsb0qA1I-a/luontokuvat/syksy/DSC35621-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/OfmRLOrScscIPINNDxwvcT67IRwlFe_xMkdwUV7cHyU=w800)](https://lh3.googleusercontent.com/OfmRLOrScscIPINNDxwvcT67IRwlFe_xMkdwUV7cHyU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAtcmMQRkj9h40S8lUS0vy_a/luontokuvat/syksy/DSC35651-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA-gdkJYd7oYR6SY84oddVVa/luontokuvat/syksy/DSC35651.jpg)
 
-[![](https://lh3.googleusercontent.com/6pV4P9V1-FC2yR1UAX8H-5I70ZxHcZg7f8KvjsFQXqA=w800)](https://lh3.googleusercontent.com/6pV4P9V1-FC2yR1UAX8H-5I70ZxHcZg7f8KvjsFQXqA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACox0J1ArfGe9E-9ERm-RYCa/luontokuvat/syksy/DSC35618-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAfl4C4TYmmBagMY9LRxagDa/luontokuvat/syksy/DSC35618.jpg)
 
-[![](https://lh3.googleusercontent.com/UtHQVl4MfCX75LMBMGG8kapzeEIWS3M84EllkHgrodo=w800)](https://lh3.googleusercontent.com/UtHQVl4MfCX75LMBMGG8kapzeEIWS3M84EllkHgrodo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADJzoCbsxNYSp1YclFsB9kra/luontokuvat/syksy/DSC35621-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADTZIHt8ijEgyecSKa8dFEza/luontokuvat/syksy/DSC35621.jpg)
 
 *Fireweed*
