--- a/luontokuvat/syksy/_posts/2015-07-14-00037.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00037.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/YX1qLP2034B6KDmpYg-FTgHpTN24rew2hXzXqjBrd0k=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACyISm5ED37LMTOLz_lPnP7a/luontokuvat/syksy/DSC15056-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/tz7YK6JJeklAkclGP7AIB3Db6qoNQBWY2FkMOkY9r5A=w800)](https://lh3.googleusercontent.com/tz7YK6JJeklAkclGP7AIB3Db6qoNQBWY2FkMOkY9r5A=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD1C6txxTV-A9r1uptN0hJta/luontokuvat/syksy/DSC15093-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAUBi53pT7RJC2oSbhQxJG3a/luontokuvat/syksy/DSC15093.jpg)
 
-[![](https://lh3.googleusercontent.com/DfcX3T_fG1hcYJJenp33kEZfgXY5NysSpXo_iRW4C3g=w800)](https://lh3.googleusercontent.com/DfcX3T_fG1hcYJJenp33kEZfgXY5NysSpXo_iRW4C3g=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABpLDCFLzPjYbVLWwcaGrnja/luontokuvat/syksy/DSC15056-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACEw5ARDYuGgJ_1jZr84MOOa/luontokuvat/syksy/DSC15056.jpg)
