--- a/luontokuvat/syksy/_posts/2015-07-14-00039.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00039.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/S1AOZ8s9FSwtjkC6BdHjXPW8NdKrEvmXRcINTENiKc4=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACt79MyiIQNtrj3kXQnZgEFa/luontokuvat/syksy/DSC15529-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/waz7DDSOUHgT9LijW753FGrqzytn6ril5xSYOTo9UYQ=w800)](https://lh3.googleusercontent.com/waz7DDSOUHgT9LijW753FGrqzytn6ril5xSYOTo9UYQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADIiLlKGqxuXPpOh2oicA4Ba/luontokuvat/syksy/DSC15529-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABQ_673qJ4FhcTByDdK04lca/luontokuvat/syksy/DSC15529.jpg)
 
 *Pihlaja*
