--- a/luontokuvat/syksy/_posts/2015-07-14-00042.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00042.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/U0hoDm3bEa8clvEpa0UhTHSR-za3oYbAdQs_-rVeY9k=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtOk08UdG_57EhrkYLLOmRa/luontokuvat/talvi/DSC17478-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/sghTeXddcLj_10k05gTN98UBieYU6EWwIsh5cZeBW2c=w800)](https://lh3.googleusercontent.com/sghTeXddcLj_10k05gTN98UBieYU6EWwIsh5cZeBW2c=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAXB4Gvyvw8krPgmyhhmjRra/luontokuvat/talvi/DSC17478-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAATtKchlYm3VVELOtyMU0uba/luontokuvat/talvi/DSC17478.jpg)
