--- a/luontokuvat/syksy/_posts/2015-07-14-00043.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00043.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/ExthWpyfCZf4WjhuJreGCAwL2PvCBesNrH891uj_8CI=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACIArZjHSg6F_wUrrTRP673a/luontokuvat/syksy/DSC18752-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/8_F9g_MDHdtkQuO1EAHykqNkepsGp11JN30vF4Qayms=w800)](https://lh3.googleusercontent.com/8_F9g_MDHdtkQuO1EAHykqNkepsGp11JN30vF4Qayms=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABm6YWgc5yFgZjl__W0f_Ipa/luontokuvat/syksy/DSC18752-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAmgyc8A2yztF4qWk_ZPZ-0a/luontokuvat/syksy/DSC18752.jpg)
