--- a/luontokuvat/syksy/_posts/2015-07-14-00044.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00044.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/C_R91bjb613nPErlkWEJF1toKiTZUpo17Z2m4kFuGlk=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAAezDBfdLJ2ccaBglicoIna/luontokuvat/syksy/DSC18912-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/suiImMc1er1l_wvkpWmmXRN0mGh3hEnxWvfN7Kx1FVs=w800)](https://lh3.googleusercontent.com/suiImMc1er1l_wvkpWmmXRN0mGh3hEnxWvfN7Kx1FVs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB9C0unTGKqOiEvDSBcUBG9a/luontokuvat/syksy/DSC18902-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAArgAJFrsfN6aUesxwYeNrDa/luontokuvat/syksy/DSC18902.jpg)
 
-[![](https://lh3.googleusercontent.com/C3hKNg7I2ZdkFv2j_JZDx41tOVLyiSAg1wyg1F3uHoc=w800)](https://lh3.googleusercontent.com/C3hKNg7I2ZdkFv2j_JZDx41tOVLyiSAg1wyg1F3uHoc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABzfBp7Rc4N_jg7blCO-yaTa/luontokuvat/syksy/DSC18908-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACoUb14QYzu40gu221RZGIPa/luontokuvat/syksy/DSC18908.jpg)
 
-[![](https://lh3.googleusercontent.com/PCBopmhSKEEbsuIqOtX1gtVkENR7DT98x5N4t2AbAkc=w800)](https://lh3.googleusercontent.com/PCBopmhSKEEbsuIqOtX1gtVkENR7DT98x5N4t2AbAkc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACurbotyYdVKwiswUtCXCdia/luontokuvat/syksy/DSC18912-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABA1IlsdfZ3ZDaQFK9bZXN1a/luontokuvat/syksy/DSC18912.jpg)
