--- a/luontokuvat/syksy/_posts/2015-07-14-00051.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00051.md
@@ -2,14 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/O_QJiP6pjYiMrRHoKBVRGuXwQPN_98c1tEnVgZ5dYt0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB2dXxdURz-SBgUbShXJFika/luontokuvat/syksy/DSC35688-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/YXYucjs8PO4_nLVkFyImn1T28uoXnKhQWRCqw1jkRJ8=w800)](https://lh3.googleusercontent.com/YXYucjs8PO4_nLVkFyImn1T28uoXnKhQWRCqw1jkRJ8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABVIMf94vGDjtJUCUr6kSN3a/luontokuvat/syksy/DSC35684-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACq1YYDYlE4p5vfoFac8wIba/luontokuvat/syksy/DSC35684.jpg)
 
-[![](https://lh3.googleusercontent.com/xEN9q81nFWGeoqgUEETrHWfMPuWOC7kElwQ4bRP340w=w800)](https://lh3.googleusercontent.com/xEN9q81nFWGeoqgUEETrHWfMPuWOC7kElwQ4bRP340w=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABXicBsGFdN9kO537L-vAwLa/luontokuvat/syksy/DSC35680-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACFdswYFEpG0qHjNgNpvLGya/luontokuvat/syksy/DSC35680.jpg)
 
-[![](https://lh3.googleusercontent.com/i3zw7XUgYJ-U43HIZXV77FeqhLa6LGVKvBv8fxOmaVU=w800)](https://lh3.googleusercontent.com/i3zw7XUgYJ-U43HIZXV77FeqhLa6LGVKvBv8fxOmaVU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADa5hq9AR9FkFehsYTtb9G_a/luontokuvat/syksy/DSC35688-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABzHoBLGRBYDshJTkZ6DjsUa/luontokuvat/syksy/DSC35688.jpg)
 
 *Ahosuolaheinä*
