--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00006.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00006.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/FJK3KoAfj1Dz5A4aISjEg5mIZIRVcXUXIPyY6I8mJmU=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAuOJ-5h7ADOcLsu9UZI-ZNa/luontokuvat/kes%C3%A4/2/DSC10016-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/qhhJ4T0r6fnntr6xtdiNbgQRqViyI5xnJ13jtaeEzQ8=w800)](https://lh3.googleusercontent.com/qhhJ4T0r6fnntr6xtdiNbgQRqViyI5xnJ13jtaeEzQ8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACpf0PFYdh8Nao1B-kqpAAla/luontokuvat/kes%C3%A4/2/DSC10016-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABFDoV57QpUknAjG7ej6fZya/luontokuvat/kes%C3%A4/2/DSC10016.jpg)
 
 *Starworts*
