--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00011.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00011.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/SDkLkBMP70TungBcBgCLklHx0JePqRuHriyrY4OmPlE=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABz7ww_zA5xmND8KL-4w9hia/luontokuvat/kes%C3%A4/2/DSC11671-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/Ab2mj-Qdg3E-v-HWIhIgFDA3aw36RCXaFD3tmBD8j8M=w800)](https://lh3.googleusercontent.com/Ab2mj-Qdg3E-v-HWIhIgFDA3aw36RCXaFD3tmBD8j8M=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtoUvlBNuPBLrU3vO6IS6Ra/luontokuvat/kes%C3%A4/2/DSC11671-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADGGLODOMJejoBrewFs63S2a/luontokuvat/kes%C3%A4/2/DSC11671.jpg)
 
-[![](https://lh3.googleusercontent.com/NGIDK7a8XoOtb7QRrULfviaIgFYjx5yHS_E7BLQlr1c=w800)](https://lh3.googleusercontent.com/NGIDK7a8XoOtb7QRrULfviaIgFYjx5yHS_E7BLQlr1c=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACHztzkt0TPdLrNfdP71dzha/luontokuvat/kes%C3%A4/2/DSC11678-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACAnIAe0_abu9zH2zSq752Pa/luontokuvat/kes%C3%A4/2/DSC11678.jpg)
