--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00017.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00017.md
@@ -2,20 +2,20 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/i6B-mpeWWYhbTh2SM5WfRN1tU3MzO8ihMCPrYWBptk8=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADuOutuxulaCQJxc7uoksXHa/luontokuvat/kes%C3%A4/2/DSC27518-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/WPvwmcPMW5ZhmlJCaYMBEeRr5MjmGJGhNmEWBYL6EFY=w800)](https://lh3.googleusercontent.com/WPvwmcPMW5ZhmlJCaYMBEeRr5MjmGJGhNmEWBYL6EFY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACETPyN5Msld8Dlm2j9qZiAa/luontokuvat/kes%C3%A4/2/DSC30529-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAwsvNX3XOAXYt5dVt5tG0ma/luontokuvat/kes%C3%A4/2/DSC30529.jpg)
 
-[![](https://lh3.googleusercontent.com/h4FlK_bq_pytUmVkBCvRnuOUyCg51QuR4J6vO9YRSW8=w800)](https://lh3.googleusercontent.com/h4FlK_bq_pytUmVkBCvRnuOUyCg51QuR4J6vO9YRSW8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABTn0MpadjimDqZl4u4MFxKa/luontokuvat/kes%C3%A4/2/DSC30537-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABvQue6IicJRnu6IYn-aZZoa/luontokuvat/kes%C3%A4/2/DSC30537.jpg)
 
-[![](https://lh3.googleusercontent.com/qQBmOHT9xIQKqx2JMXXOntu9rtW6dYEeOoUJrOZY0mU=w800)](https://lh3.googleusercontent.com/qQBmOHT9xIQKqx2JMXXOntu9rtW6dYEeOoUJrOZY0mU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9vkRB16lrxiWoI2KXtWita/luontokuvat/kes%C3%A4/2/DSC27530-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADzkYXCDfT-MRpL3YMl7wrza/luontokuvat/kes%C3%A4/2/DSC27530.jpg)
 
-[![](https://lh3.googleusercontent.com/WFVaWVcl1QeX9mKqhDzAxSw4lvMQmH4a49JVux3DPGI=w800)](https://lh3.googleusercontent.com/WFVaWVcl1QeX9mKqhDzAxSw4lvMQmH4a49JVux3DPGI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADS9M-aYzALR8hxgoYelN2-a/luontokuvat/kes%C3%A4/2/DSC27522-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAALWQuxt12Uy2C09LkVpXPoa/luontokuvat/kes%C3%A4/2/DSC27522.jpg)
 
-[![](https://lh3.googleusercontent.com/VTZIq_iOin6ajxh1mzFbAk0X2EQQFnOD4osNxHPtRic=w800)](https://lh3.googleusercontent.com/VTZIq_iOin6ajxh1mzFbAk0X2EQQFnOD4osNxHPtRic=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADA_Dw0xI-JvsaVt9CEuZc0a/luontokuvat/kes%C3%A4/2/DSC27521-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABI0gRMILDrkapUSc2iFay7a/luontokuvat/kes%C3%A4/2/DSC27521.jpg)
 
-[![](https://lh3.googleusercontent.com/PuiqiS6PTiuSjgi4yTL0X4hJiXc1KXO1aaUfvOqyo48=w800)](https://lh3.googleusercontent.com/PuiqiS6PTiuSjgi4yTL0X4hJiXc1KXO1aaUfvOqyo48=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACW6T-0f6JSmYDNdB16nDVsa/luontokuvat/kes%C3%A4/2/DSC27518-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9Ta550Tzd0Ocqufo0QIoYa/luontokuvat/kes%C3%A4/2/DSC27518.jpg)
 
 *Meadow vetchling*
