--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00018.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00018.md
@@ -2,18 +2,18 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/aa4i7IjfNsvRtuXZukQ50PeW6UAVn1GbTJtcFgGbvBg=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADN3lTod4W3eMBmkpDttuLIa/luontokuvat/kes%C3%A4/2/DSC27575-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/WQpQr7CJuCJyUzBA9ANaJdV31KibJ19JN8CzXQ5_Ivw=w800)](https://lh3.googleusercontent.com/WQpQr7CJuCJyUzBA9ANaJdV31KibJ19JN8CzXQ5_Ivw=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB3Cw8kBIdZxXXTUFTOnBa8a/luontokuvat/kes%C3%A4/2/DSC27563-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACA5fboPZxgHIifyGlo68v7a/luontokuvat/kes%C3%A4/2/DSC27563.jpg)
 
-[![](https://lh3.googleusercontent.com/_gIA4D2Ss4pqObTSSkIOO3yQuioF2F1nmFg4-RfhA-o=w800)](https://lh3.googleusercontent.com/_gIA4D2Ss4pqObTSSkIOO3yQuioF2F1nmFg4-RfhA-o=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC6cbCz-utguJIAUCktxq1ca/luontokuvat/kes%C3%A4/2/DSC27569-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAWjOKM_b8l520UiJXora_ba/luontokuvat/kes%C3%A4/2/DSC27569.jpg)
 
-[![](https://lh3.googleusercontent.com/SKveoq7kibCnDWniy4-z5ssc_NyfMhyf4HsyOfvn6fQ=w800)](https://lh3.googleusercontent.com/SKveoq7kibCnDWniy4-z5ssc_NyfMhyf4HsyOfvn6fQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACKQHGYxMlBDS1VAt_hupx-a/luontokuvat/kes%C3%A4/2/DSC27572-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAuuMuxm47vTEjtgYJ1t0O8a/luontokuvat/kes%C3%A4/2/DSC27572.jpg)
 
-[![](https://lh3.googleusercontent.com/naB2cfeB_SjUcN9mfwFdC4RFOlgmc_H3wdVug9anzKQ=w800)](https://lh3.googleusercontent.com/naB2cfeB_SjUcN9mfwFdC4RFOlgmc_H3wdVug9anzKQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACWm7z0pKY-nmN-InXcx0Uua/luontokuvat/kes%C3%A4/2/DSC27575-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABZNyfcVNxu6D0EZi8zeeT6a/luontokuvat/kes%C3%A4/2/DSC27575.jpg)
 
-[![](https://lh3.googleusercontent.com/cMbsaWJb-zzqywXiKJCjvdC6BF6JfQoyCx1bOrvI2yo=w800)](https://lh3.googleusercontent.com/cMbsaWJb-zzqywXiKJCjvdC6BF6JfQoyCx1bOrvI2yo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADApIW56PC5obvup0iECc-ra/luontokuvat/kes%C3%A4/2/DSC27589-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABdA5hdB0mDrxQ4LWK9zk3-a/luontokuvat/kes%C3%A4/2/DSC27589.jpg)
 
-[![](https://lh3.googleusercontent.com/_e0WFkslHJMoOJ_Cs7gxNGHSwft1HmMFG_IHQfdw12k=w800)](https://lh3.googleusercontent.com/_e0WFkslHJMoOJ_Cs7gxNGHSwft1HmMFG_IHQfdw12k=s0)
+[![](hhttps://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACgdeF576to3ChVKQfIOlFoa/luontokuvat/kes%C3%A4/2/DSC27597-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABSSRhT8fjiV2kPlic44Caja/luontokuvat/kes%C3%A4/2/DSC27597.jpg)
