--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00019.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00019.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/YBK4gNG8QEAvww5S1w76Mwnzb8stcRaXpol1ThThDgo=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA5-LGSVrAZLLjLGST8nVkLa/luontokuvat/kes%C3%A4/2/DSC27843-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/uUWCY2SlqLzPE3YtOl61n-zDN-t2GjvZ8FA_C4XJ-Kk=w800)](https://lh3.googleusercontent.com/uUWCY2SlqLzPE3YtOl61n-zDN-t2GjvZ8FA_C4XJ-Kk=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA4ljJkCB3S0_8VCiSfYt0ja/luontokuvat/kes%C3%A4/2/DSC27843-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACVc311Yr40vN3uF3WnuQSba/luontokuvat/kes%C3%A4/2/DSC27843.jpg)
 
-[![](https://lh3.googleusercontent.com/b4hqISCnFfkavvTkt_ZiF48C8-Nu2AK8_lCBx8733gg=w800)](https://lh3.googleusercontent.com/b4hqISCnFfkavvTkt_ZiF48C8-Nu2AK8_lCBx8733gg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD5pdenO1I0Co6BSGuz8AGna/luontokuvat/kes%C3%A4/2/DSC27846-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAQ53Fy6yFEaHZXp8hglp0Za/luontokuvat/kes%C3%A4/2/DSC27846.jpg)
 
 *Daisies by a lake*
