--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00024.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00024.md
@@ -2,20 +2,20 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/6v_MmX6J-38i0pMPGEuzS8HgYGcqS8ka8dsbi97xPF4=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADnqLmISyjKrdPuKPCNppjXa/luontokuvat/kes%C3%A4/2/DSC28782-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/-qdS_qmifd2piQdXxmRK0DoB5TNTYtWGoexa9cIiTyA=w800)](https://lh3.googleusercontent.com/-qdS_qmifd2piQdXxmRK0DoB5TNTYtWGoexa9cIiTyA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABJULLAY7UXvImIOy-OivDIa/luontokuvat/kes%C3%A4/2/DSC28778-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAxT4Zr4ynt5c_98Fu44nr2a/luontokuvat/kes%C3%A4/2/DSC28778.jpg)
 
-[![](https://lh3.googleusercontent.com/Cw8pb56pR3vNMY5X8pwfWzULvgBlp0T8M__HlnY6Qtw=w800)](https://lh3.googleusercontent.com/Cw8pb56pR3vNMY5X8pwfWzULvgBlp0T8M__HlnY6Qtw=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAfY5hpnPZ21KXsBBGCAhb7a/luontokuvat/kes%C3%A4/2/DSC28777-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABN4exMPlMUZEq6ZrxW39apa/luontokuvat/kes%C3%A4/2/DSC28777.jpg)
 
-[![](https://lh3.googleusercontent.com/lLtMun8mD_46eTlc6Tt_4iZ7D7udthZaKVivXjtmsbQ=w800)](https://lh3.googleusercontent.com/lLtMun8mD_46eTlc6Tt_4iZ7D7udthZaKVivXjtmsbQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABdbrcoG4fnJI735M82SxW9a/luontokuvat/kes%C3%A4/2/DSC28780-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACHxLbzk6li4ql-ff87Nuywa/luontokuvat/kes%C3%A4/2/DSC28780.jpg)
 
-[![](https://lh3.googleusercontent.com/-PMIsbPPimfFfh6KkgYbbdFNGIySHBLYt9vN8c4f018=w800)](https://lh3.googleusercontent.com/-PMIsbPPimfFfh6KkgYbbdFNGIySHBLYt9vN8c4f018=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADneaBySlZMtYCyxC-BE8NKa/luontokuvat/kes%C3%A4/2/DSC28782-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAARk4ybVSVwN97MC80SKWHva/luontokuvat/kes%C3%A4/2/DSC28782.jpg)
 
-[![](https://lh3.googleusercontent.com/8wGAEJ5RR43JjzGdi7GLNsqRuT9mO4gfzWVkxH91gq0=w800)](https://lh3.googleusercontent.com/8wGAEJ5RR43JjzGdi7GLNsqRuT9mO4gfzWVkxH91gq0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC3H5EWapFopWB-eHNJiCO0a/luontokuvat/kes%C3%A4/2/DSC28794-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADCS8mUMiyRyqv9LM4tyCtja/luontokuvat/kes%C3%A4/2/DSC28794.jpg)
 
-[![](https://lh3.googleusercontent.com/nR_ugNgcBzRk8H4LIOeg5yG2dWCpgFYl-f3q_ezeWN0=w800)](https://lh3.googleusercontent.com/nR_ugNgcBzRk8H4LIOeg5yG2dWCpgFYl-f3q_ezeWN0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACnzhi1E8-eYQN3mSvhX1x-a/luontokuvat/kes%C3%A4/2/DSC28798-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAANimwT83sFdBbTfOPkKO9ua/luontokuvat/kes%C3%A4/2/DSC28798.jpg)
 
 *Lupine*
