--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00016.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00016.md
@@ -2,18 +2,18 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/m8jP6CyQ9r_cRiXWFF7eCc0Fqiihag2C87YWZdpQseo=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABUNjFYQciUU7jZY2s_pZJka/luontokuvat/kes%C3%A4/2/DSC27491-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/6jB-UzPl0QN0N3kOQOGODd2Fobr4y2bFvwE1kOorG30=w800)](https://lh3.googleusercontent.com/6jB-UzPl0QN0N3kOQOGODd2Fobr4y2bFvwE1kOorG30=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABch1PABVegWrGevMe86R-ra/luontokuvat/kes%C3%A4/2/DSC27453-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABU3L6fF9yE8QqONXzYix7ea/luontokuvat/kes%C3%A4/2/DSC27453.jpg)
 
-[![](https://lh3.googleusercontent.com/TLADmFknrrOs7KJTWb2EyDAjHMpZDc7eho_zD3j4Q2I=w800)](https://lh3.googleusercontent.com/TLADmFknrrOs7KJTWb2EyDAjHMpZDc7eho_zD3j4Q2I=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAz7fuA9EZ_glyhiZ9yXlzna/luontokuvat/kes%C3%A4/2/DSC27460-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA_tLNCmyuggpG8jWXszvIqa/luontokuvat/kes%C3%A4/2/DSC27460.jpg)
 
-[![](https://lh3.googleusercontent.com/moWAvR10jsON5UtI_LT0YZvedj4md9mKC1QkMVIjSsI=w800)](https://lh3.googleusercontent.com/moWAvR10jsON5UtI_LT0YZvedj4md9mKC1QkMVIjSsI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB13qh6PVK0zCvsUMSkq5B2a/luontokuvat/kes%C3%A4/2/DSC27475-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACRnN1FcSR36Ekbvmwlxa_aa/luontokuvat/kes%C3%A4/2/DSC27475.jpg)
 
-[![](https://lh3.googleusercontent.com/Namd892iuryChjgbFgciZ1CQtG7ZTFF8C13S38fYEQU=w800)](https://lh3.googleusercontent.com/Namd892iuryChjgbFgciZ1CQtG7ZTFF8C13S38fYEQU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAtvGLGmRGqynSTfs2IJyiea/luontokuvat/kes%C3%A4/2/DSC27491-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACK5mNP8MtJn8UONR7ryPFGa/luontokuvat/kes%C3%A4/2/DSC27491.jpg)
 
-[![](https://lh3.googleusercontent.com/-Vj1eQU4FCZeYYbnBihS_O66-Hpqc-znNPgJM8WBb6M=w800)](https://lh3.googleusercontent.com/-Vj1eQU4FCZeYYbnBihS_O66-Hpqc-znNPgJM8WBb6M=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABDbyoJ-sO2bm8XvLe0CWwCa/luontokuvat/kes%C3%A4/2/DSC27468-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACA5o8YzTHafffJxcSa0a-ta/luontokuvat/kes%C3%A4/2/DSC27468.jpg)
 
-[![](https://lh3.googleusercontent.com/QL8rDOdLHhIRg9p95n0pP9yxcHbXmao8inGLdwVKqWY=w800)](https://lh3.googleusercontent.com/QL8rDOdLHhIRg9p95n0pP9yxcHbXmao8inGLdwVKqWY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAkfF6DLNqR0b2g2aKwUh_la/luontokuvat/kes%C3%A4/2/DSC28278-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD5mEyN6CLgudaWFufZuZala/luontokuvat/kes%C3%A4/2/DSC28278.jpg)
