--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00020.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00020.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/cIcLxFV2-7vJOiCxAZWRAcMG8DPHnvH0ss6ecoi8dJo=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADZYLKH1CfnIbzrc6wN8kAUa/luontokuvat/kes%C3%A4/2/DSC28245-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/_wFqwRQ_ZASFDGayXgxwIonOeovw2cH-_o1wjRAyoOM=w800)](https://lh3.googleusercontent.com/_wFqwRQ_ZASFDGayXgxwIonOeovw2cH-_o1wjRAyoOM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAuSsnzwVDWWx1PowzTZtrva/luontokuvat/kes%C3%A4/2/DSC28245-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABvVPfzcPASF8p2ZsVp-yaca/luontokuvat/kes%C3%A4/2/DSC28245.jpg)
 
 *Yellow iris*
