--- a/luontokuvat/kesa/_posts/2015-07-14-00022.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00022.md
@@ -2,18 +2,18 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/QvKL_jjf-iTdPR0Zrool0jvK8xcImDJt6kvj4uFbmn0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADlzyc94EcMf_7_5Kg3zIdza/luontokuvat/kes%C3%A4/2/DSC28590-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/B-9psUcMHU8LKI5LcPOCH1e2ISXm1E4vtXmMMDXrp3Q=w800)](https://lh3.googleusercontent.com/B-9psUcMHU8LKI5LcPOCH1e2ISXm1E4vtXmMMDXrp3Q=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACjitlMjwKE1bvyVYM0gzUQa/luontokuvat/kes%C3%A4/2/DSC28575-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADolwwTU_lzwCIZveA_YlWCa/luontokuvat/kes%C3%A4/2/DSC28575.jpg)
 
-[![](https://lh3.googleusercontent.com/qJcv2HUUtQ4iNoJFhDE85Uj6f09RECaAflx_c-XA7A8=w800)](https://lh3.googleusercontent.com/qJcv2HUUtQ4iNoJFhDE85Uj6f09RECaAflx_c-XA7A8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAl61Da9Ckn60DT0Pa8Edwba/luontokuvat/kes%C3%A4/2/DSC28590-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC9Ciair2KVwpYcA6Ke4MsPa/luontokuvat/kes%C3%A4/2/DSC28590.jpg)
 
-[![](https://lh3.googleusercontent.com/wzCfSlY443ga4PKmwqFIoZQjNmPKFXWrAY3p4DvfQPg=w800)](https://lh3.googleusercontent.com/wzCfSlY443ga4PKmwqFIoZQjNmPKFXWrAY3p4DvfQPg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA39NDEg0VdFj_UpvwJ_OFxa/luontokuvat/kes%C3%A4/2/DSC28612-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD9KYZJBg45dDVM8BXUz7WOa/luontokuvat/kes%C3%A4/2/DSC28612.jpg)
 
-[![](https://lh3.googleusercontent.com/ApL0tTKRMDmjSprtZyUqkkhCg78xh0VsMrcczFN59ys=w800)](https://lh3.googleusercontent.com/ApL0tTKRMDmjSprtZyUqkkhCg78xh0VsMrcczFN59ys=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABgjVOaT9c-H9EYnyMN7ogQa/luontokuvat/kes%C3%A4/2/DSC28635-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAMl9MJOHCkG_2HP1s8How5a/luontokuvat/kes%C3%A4/2/DSC28635.jpg)
 
-[![](https://lh3.googleusercontent.com/cQFsmX9VohRjsvmHDjzyklIwypLRmIPudfxiWKlp0cs=w800)](https://lh3.googleusercontent.com/cQFsmX9VohRjsvmHDjzyklIwypLRmIPudfxiWKlp0cs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADr-3rsLS8j8xxmBInZ_d32a/luontokuvat/kes%C3%A4/2/DSC28658-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB_Nrd6kgg-DOzvbuGrc3WJa/luontokuvat/kes%C3%A4/2/DSC28658.jpg)
 
 *Päivänkakkarat*
