--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00025.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00025.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/K-mG3-cOicv9yDSnmLAlhgt4k361t3zCSo3iE3yjWNc=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABZF1W27S16bATvDHHHfkD3a/luontokuvat/kes%C3%A4/2/DSC28848-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/Ppvf0QMz1aTdHrmVu0j9YO9xrS6-5FBY_wJob1x_kyI=w800)](https://lh3.googleusercontent.com/Ppvf0QMz1aTdHrmVu0j9YO9xrS6-5FBY_wJob1x_kyI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACL2u2yd83XIVxiWQ89sXlFa/luontokuvat/kes%C3%A4/2/DSC28848-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADslUN_NLbWa28yW6KLyK9ba/luontokuvat/kes%C3%A4/2/DSC28848.jpg)
 
-[![](https://lh3.googleusercontent.com/qEbng7diSAi5WWerwwIP7bRyUZP0p3y_NW9N8OKsw1w=w800)](https://lh3.googleusercontent.com/qEbng7diSAi5WWerwwIP7bRyUZP0p3y_NW9N8OKsw1w=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACuLxFRlqUiU4DBPiWaTGHXa/luontokuvat/kes%C3%A4/2/DSC28849-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADdosSIEc2jZCC-AQRKrNPha/luontokuvat/kes%C3%A4/2/DSC28849.jpg)
