--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00033.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00033.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/u11gSZ1NxvRNLZxwKsmiekLL_WFi_NoNbmGC9ElhyuE=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABMKNHQKbEcg5en-yGcH-lba/luontokuvat/kes%C3%A4/2/DSC30653-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/Qvl38bo3LH-GEz18WRZySImJW37T8_n0GHsrl2dtaRA=w800)](https://lh3.googleusercontent.com/Qvl38bo3LH-GEz18WRZySImJW37T8_n0GHsrl2dtaRA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAvNYJ2w3JvNWpHTJJXZVQMa/luontokuvat/kes%C3%A4/2/DSC30653-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABTVYLz27YtjN1R1KzXRYHaa/luontokuvat/kes%C3%A4/2/DSC30653.jpg)
 
 *Daisy*
