--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00042.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00042.md
@@ -2,15 +2,15 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/eSsSh9DJyWy52rbsk8_thm95j_KtArrnGNVWlYRH6QI=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACABx-BbCcR3mwdkNXT2u30a/luontokuvat/kes%C3%A4/2/DSC33104-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/yb2nh8LmhY3NKQh3I60VhQbzEIdh-MqeXkTeEnMtmjQ=w800)](https://lh3.googleusercontent.com/yb2nh8LmhY3NKQh3I60VhQbzEIdh-MqeXkTeEnMtmjQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADqstOlInD0Ib44olPNOgMha/luontokuvat/kes%C3%A4/2/DSC33104-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABF9BfhAxkvtOUJteuuP4qza/luontokuvat/kes%C3%A4/2/DSC33104.jpg)
 
-[![](https://lh3.googleusercontent.com/kk29SyBE4eTWLKbwW4g9WNHSOl4q358T5pyjDvBhoE0=w800)](https://lh3.googleusercontent.com/kk29SyBE4eTWLKbwW4g9WNHSOl4q358T5pyjDvBhoE0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADL2oLzyipBQBxLpzcyF46ua/luontokuvat/kes%C3%A4/2/DSC33106-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADH7HSlnC1Q25IcY8EvelHma/luontokuvat/kes%C3%A4/2/DSC33106.jpg)
 
-[![](https://lh3.googleusercontent.com/BDsYpEKdqvDKl-MJ39W8TN1pQ_3jthg6NYy6BlDHSeY=w800)](https://lh3.googleusercontent.com/BDsYpEKdqvDKl-MJ39W8TN1pQ_3jthg6NYy6BlDHSeY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAkejBa5FNOyQuoGRcOKfZJa/luontokuvat/kes%C3%A4/2/DSC33111-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADTqYE98J86seVgJFFaEknsa/luontokuvat/kes%C3%A4/2/DSC33111.jpg)
 
-[![](https://lh3.googleusercontent.com/dGawor5DPhxxupRSONnHPrB4NSr-YC8OMCueNu6sclE=w800)](https://lh3.googleusercontent.com/dGawor5DPhxxupRSONnHPrB4NSr-YC8OMCueNu6sclE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABrAwZEHSnh1Wc0OfsXRUOfa/luontokuvat/kes%C3%A4/2/DSC33114-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAB9uuNWyesFouhIjwa7Muea/luontokuvat/kes%C3%A4/2/DSC33114.jpg)
 
