--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00049.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00049.md
@@ -2,10 +2,10 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/8XkdotGf2MCSliKYQKm7XhJxOvbEAPufbXUCIipnDng=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB2hocCecidisQZ_70WWSDca/luontokuvat/kes%C3%A4/2/DSC33362-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/5RlXHUlARRziJK06r-LCFHAiyWZJzr0oJNdWZtpYr4Y=w800)](https://lh3.googleusercontent.com/5RlXHUlARRziJK06r-LCFHAiyWZJzr0oJNdWZtpYr4Y=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABSqRimOTPaEaJVfLZICLata/luontokuvat/kes%C3%A4/2/DSC33362-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADD-rJ9BebSmXs46PRhU5cNa/luontokuvat/kes%C3%A4/2/DSC33362.jpg)
 
-[![](https://lh3.googleusercontent.com/P_WbYu64qdMFHYAtbQL_XBVcNBjORw5AFtSuYELashY=w800)](https://lh3.googleusercontent.com/P_WbYu64qdMFHYAtbQL_XBVcNBjORw5AFtSuYELashY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAQYmPoJDYLBgh2EPFssi_1a/luontokuvat/kes%C3%A4/2/DSC33363-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAvQNjDABSJi7JlFtFqW_bVa/luontokuvat/kes%C3%A4/2/DSC33363.jpg)
