--- a/luontokuvat/kesa/_posts/2015-07-14-00040.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00040.md
@@ -2,18 +2,18 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/7bob2VMfM1NV-d8zE84vH9-5b0hU-j6PKWWn1tfA6Ok=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADvHYRzYH0JK38L8A8DdZjSa/luontokuvat/kes%C3%A4/2/DSC31820-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/rXsZuLex4WZGaDynEZMNnrfx7A7JjKT2_ZSLK49Wvis=w800)](https://lh3.googleusercontent.com/rXsZuLex4WZGaDynEZMNnrfx7A7JjKT2_ZSLK49Wvis=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACa4j69m7SjCv3rJr6kDccGa/luontokuvat/kes%C3%A4/2/DSC31803-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB29QH3X9f3NLzp1mAcctOWa/luontokuvat/kes%C3%A4/2/DSC31803.jpg)
 
-[![](https://lh3.googleusercontent.com/0qLxMoE8Iq22PFshVMl4nDEI2UPhKKzUqUFzu1lBHFc=w800)](https://lh3.googleusercontent.com/0qLxMoE8Iq22PFshVMl4nDEI2UPhKKzUqUFzu1lBHFc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC9mOgY9kGqZSAxBfxHrDhKa/luontokuvat/kes%C3%A4/2/DSC31820-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD2T4IvxlZBaPP8jXAY02_ha/luontokuvat/kes%C3%A4/2/DSC31820.jpg)
 
-[![](https://lh3.googleusercontent.com/O26zZnKoenGAj1ua9F6X5msz_9SNmia1krvHYxTkWc8=w800)](https://lh3.googleusercontent.com/O26zZnKoenGAj1ua9F6X5msz_9SNmia1krvHYxTkWc8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAaSM4g83vUGBptN5atbCgma/luontokuvat/kes%C3%A4/2/DSC31824-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADbjFOxui9-X8AWZxs8gzqVa/luontokuvat/kes%C3%A4/2/DSC31824.jpg)
 
-[![](https://lh3.googleusercontent.com/msFxYvPV0sAo4lsA_vUkelpUF6s_naL94wU8gusuakE=w800)](https://lh3.googleusercontent.com/msFxYvPV0sAo4lsA_vUkelpUF6s_naL94wU8gusuakE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACRl3Y_ePOvfKWl4NJED2rfa/luontokuvat/kes%C3%A4/2/DSC31837-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABWZdsnyHmMpRQ27QOazIT2a/luontokuvat/kes%C3%A4/2/DSC31837.jpg)
 
-[![](https://lh3.googleusercontent.com/jmp1QrEDePCDuTyASrF8NpWzOsa9UCSWJZKqNJwf-WY=w800)](https://lh3.googleusercontent.com/jmp1QrEDePCDuTyASrF8NpWzOsa9UCSWJZKqNJwf-WY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB2hKKTYAa2WC7B7yyXXAyla/luontokuvat/kes%C3%A4/2/DSC31841-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAYaTNBHGq0vzr3yqbxIRUaa/luontokuvat/kes%C3%A4/2/DSC31841.jpg)
 
 *Lupiini*
