--- a/luontokuvat/kesa/_posts/2015-07-14-00048.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00048.md
@@ -2,20 +2,20 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/Vw-29gCnqtzGlnXn2Xwx3Qbmz4wAGmBsKBp3ffZonOU=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACmw8mQyc5roJE-adjFk1uKa/luontokuvat/kes%C3%A4/2/DSC33308-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/zTdUNVGPtAlZnZuFWa6UpASWL96P1thxaeyqdqVO8ko=w800)](https://lh3.googleusercontent.com/zTdUNVGPtAlZnZuFWa6UpASWL96P1thxaeyqdqVO8ko=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABNj3FHNI8sBwG_peQMAq39a/luontokuvat/kes%C3%A4/2/DSC33244-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC4xPTd5Vv3-2h6WjP-Zq4Xa/luontokuvat/kes%C3%A4/2/DSC33244.jpg)
 
-[![](https://lh3.googleusercontent.com/6PDq-mSxMRjuNeOVQ-DifIKG9s7bWIq3jICnSaJ3DM0=w800)](https://lh3.googleusercontent.com/6PDq-mSxMRjuNeOVQ-DifIKG9s7bWIq3jICnSaJ3DM0=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAV69zqTbb8YLEQNn7tCiU4a/luontokuvat/kes%C3%A4/2/DSC33249-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADJvKJGH0K1ATEU8Viq639Ka/luontokuvat/kes%C3%A4/2/DSC33249.jpg)
 
-[![](https://lh3.googleusercontent.com/c4biIHqFSwZ3647lNp4H0st7XxM18NMSub4VqdHXCCg=w800)](https://lh3.googleusercontent.com/c4biIHqFSwZ3647lNp4H0st7XxM18NMSub4VqdHXCCg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAANe7xVTYJlswjUbJEKcd5ma/luontokuvat/kes%C3%A4/2/DSC33271-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA70VgTf1u6GTY1ht-nerFea/luontokuvat/kes%C3%A4/2/DSC33271.jpg)
 
-[![](https://lh3.googleusercontent.com/usl_hqWp2JsmL0seAhnF-DLLjtzLwKHOgBDJ5WIhM4c=w800)](https://lh3.googleusercontent.com/usl_hqWp2JsmL0seAhnF-DLLjtzLwKHOgBDJ5WIhM4c=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACasBU6t-BCXoMRaMgUz3oIa/luontokuvat/kes%C3%A4/2/DSC33278-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAF-5gMbDsVGVpB4A19OzUaa/luontokuvat/kes%C3%A4/2/DSC33278.jpg)
 
-[![](https://lh3.googleusercontent.com/WntudrDbNGAQWzveLYNa1ikqql_fXiUSHTBhzd_TerQ=w800)](https://lh3.googleusercontent.com/WntudrDbNGAQWzveLYNa1ikqql_fXiUSHTBhzd_TerQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD_o6htB0mWMH-Uj5XIZQjVa/luontokuvat/kes%C3%A4/2/DSC33308-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADm1lq0z-g3zIX5dcXSTsZQa/luontokuvat/kes%C3%A4/2/DSC33308.jpg)
 
-[![](https://lh3.googleusercontent.com/FyzFEQi3iNOmHK0-gMEig-DlTXRQK0HEq4uYKYr37_4=w800)](https://lh3.googleusercontent.com/FyzFEQi3iNOmHK0-gMEig-DlTXRQK0HEq4uYKYr37_4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABKzaE9g9uED-CgAjNHZG_Ha/luontokuvat/kes%C3%A4/2/DSC33309-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXZ9bgnbMF1sFvd77eTE_ba/luontokuvat/kes%C3%A4/2/DSC33309.jpg)
 
 *Päivänkakkara*
