--- a/luontokuvat/kesa/_posts/2015-07-14-00038.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00038.md
@@ -2,16 +2,16 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/EYSkUBtnUMUIyIC4HKszIrtxiiSVUn7spfjV-DY57Gs=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABMxRqG58cuxrQamlX3UG44a/luontokuvat/kes%C3%A4/2/DSC31708-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/Gtl46gyKehCnjczPjAlfgS5iQZDeReBv9gs2HMc8V8w=w800)](https://lh3.googleusercontent.com/Gtl46gyKehCnjczPjAlfgS5iQZDeReBv9gs2HMc8V8w=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAgOLNXH-JhmuS2NCeldS8Ja/luontokuvat/kes%C3%A4/2/DSC31709-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAQcc3laQ7WIUUtJx8Lc4wIa/luontokuvat/kes%C3%A4/2/DSC31709.jpg)
 
-[![](https://lh3.googleusercontent.com/7LVjBk13TW9JHvvjInyMjStRMpUejnfOuK2JOjgxkm4=w800)](https://lh3.googleusercontent.com/7LVjBk13TW9JHvvjInyMjStRMpUejnfOuK2JOjgxkm4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABx2c9_7h6BYXLNSeYi2T8xa/luontokuvat/kes%C3%A4/2/DSC31711-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADSG2T3zofYHQBzo2tWo5jpa/luontokuvat/kes%C3%A4/2/DSC31711.jpg)
 
-[![](https://lh3.googleusercontent.com/JaEeruxqbhG5evg79bcTamQ5lahIGOlk3SsW_6x4WI4=w800)](https://lh3.googleusercontent.com/JaEeruxqbhG5evg79bcTamQ5lahIGOlk3SsW_6x4WI4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtMkEC8v6oYqd0u-RJbIwHa/luontokuvat/kes%C3%A4/2/DSC31706-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABrJy9hoy03YCfDWaGqV-sRa/luontokuvat/kes%C3%A4/2/DSC31706.jpg)
 
-[![](https://lh3.googleusercontent.com/20APmSPPj91xXyRfqhO_KHrlWTJ8MbknMqPF_ecPHIw=w800)](https://lh3.googleusercontent.com/20APmSPPj91xXyRfqhO_KHrlWTJ8MbknMqPF_ecPHIw=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAmqNFHkzOoy3WzVQcRBoYXa/luontokuvat/kes%C3%A4/2/DSC31708-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAASUXMprTy_0kEWfice9UbIa/luontokuvat/kes%C3%A4/2/DSC31708.jpg)
 
 *Nurmikohokki*
