--- a/luontokuvat/kesa/_posts/2015-07-14-00041.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00041.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/dI5hR8EhLAJkqc3wFOIz3KkiufnQuNx7Qo315hvLvE8=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAmlpUVKwzcAgi-lPxC1b3pa/luontokuvat/kes%C3%A4/2/DSC32918-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/CTQ-MBFogFGVmmqFL3d82K_P_ner4bTs6M-s63NyxTc=w800)](https://lh3.googleusercontent.com/CTQ-MBFogFGVmmqFL3d82K_P_ner4bTs6M-s63NyxTc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA4m0hVaxsURwJersjS7Eyba/luontokuvat/kes%C3%A4/2/DSC32925-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABxH5UaW5gVKd6_uo1C6JWPa/luontokuvat/kes%C3%A4/2/DSC32925.jpg)
 
-[![](https://lh3.googleusercontent.com/A-uXghpDuz1ruyIiMsJrpA_PgyipZv1VLsyK85wPyjU=w800)](https://lh3.googleusercontent.com/A-uXghpDuz1ruyIiMsJrpA_PgyipZv1VLsyK85wPyjU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAKjiCvPvucFxrzUNRWfeTOa/luontokuvat/kes%C3%A4/2/DSC32923-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAmHNQOfhFTifPDdHK95XiIa/luontokuvat/kes%C3%A4/2/DSC32923.jpg)
 
-[![](https://lh3.googleusercontent.com/0KDLT4BCtD2YW3azDwDjXOTztcrcjTJZMW3rF8RKMl8=w800)](https://lh3.googleusercontent.com/0KDLT4BCtD2YW3azDwDjXOTztcrcjTJZMW3rF8RKMl8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAH0p_kFpm17kmMYQFvuvlia/luontokuvat/kes%C3%A4/2/DSC32918-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACHtiz5paDlTPiZU-xPP2lfa/luontokuvat/kes%C3%A4/2/DSC32918.jpg)
