--- a/luontokuvat/kesa/_posts/2015-07-14-00043.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00043.md
@@ -2,24 +2,26 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/DabiIdiAzsSsa366ShNjibZP7wg6e9BleYO2vhwDjKY=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABLXGk3cPXAkaNIov0mXFOia/luontokuvat/kes%C3%A4/2/DSC33119-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/vY0R_4CNzxASoXVk6mKvLs2JnWj4Xbdq6DmKJeJB4Nc=w800)](https://lh3.googleusercontent.com/vY0R_4CNzxASoXVk6mKvLs2JnWj4Xbdq6DmKJeJB4Nc=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACfBLAke7Z0DiIf2EzUO1yba/luontokuvat/kes%C3%A4/2/DSC33131-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABedAwdn4LwBbKJHm6zuqJva/luontokuvat/kes%C3%A4/2/DSC33131.jpg)
 
-[![](https://lh3.googleusercontent.com/d2UKyfKriSsWybQuXuZ9IN1YlFausLoxrtmqafI1wQI=w800)](https://lh3.googleusercontent.com/d2UKyfKriSsWybQuXuZ9IN1YlFausLoxrtmqafI1wQI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACI8XUOYKhwUIRRv2aATuvra/luontokuvat/kes%C3%A4/2/DSC33132-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABiIK38Y18aZmqddmgeq2oia/luontokuvat/kes%C3%A4/2/DSC33132.jpg)
 
-[![](https://lh3.googleusercontent.com/eI5hSVN7ATmqisLNVJA1xAOPqnuNQmRll_hhZvYAawI=w800)](https://lh3.googleusercontent.com/eI5hSVN7ATmqisLNVJA1xAOPqnuNQmRll_hhZvYAawI=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD69uoymvdKrjq8FZtSBbIka/luontokuvat/kes%C3%A4/2/DSC33137-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADNFlOr2Q0y19lSQRjO4Ym3a/luontokuvat/kes%C3%A4/2/DSC33137.jpg)
 
-[![](https://lh3.googleusercontent.com/Vps7cVHREy6J6k2ennxRGNKvwVqji0nfbKjv3k0wCxs=w800)](https://lh3.googleusercontent.com/Vps7cVHREy6J6k2ennxRGNKvwVqji0nfbKjv3k0wCxs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD7ER5kklHLnS1s20s34Gf2a/luontokuvat/kes%C3%A4/2/DSC33139-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABPkx_g5TA7-HBpf79vQpXRa/luontokuvat/kes%C3%A4/2/DSC33139.jpg)
 
-[![](https://lh3.googleusercontent.com/_8M1oUW4DWUrN7Xo_Lw8P_WMh7lD_FtAqRCeqMETd6k=w800)](https://lh3.googleusercontent.com/_8M1oUW4DWUrN7Xo_Lw8P_WMh7lD_FtAqRCeqMETd6k=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACIHFctmAjUX18DQNUz1h0ja/luontokuvat/kes%C3%A4/2/DSC33188-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAAB8dWHSXDy1x4HSz8OGLRa/luontokuvat/kes%C3%A4/2/DSC33188.jpg)
 
-[![](https://lh3.googleusercontent.com/nbWyrBbW5goiYTf7CF9b-T9q4rjTu6gYkpvaOOyXoy4=w800)](https://lh3.googleusercontent.com/nbWyrBbW5goiYTf7CF9b-T9q4rjTu6gYkpvaOOyXoy4=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB6LM3IbsSQf5FZNhKa0mIva/luontokuvat/kes%C3%A4/2/DSC33125-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC3Q60oxZng7cThyJsnEqiBa/luontokuvat/kes%C3%A4/2/DSC33125.jpg)
 
-[![](https://lh3.googleusercontent.com/LffM1A3AkJgEjD45_tg29iXibcQuqA5e1-OR5AO7O20=w800)](https://lh3.googleusercontent.com/LffM1A3AkJgEjD45_tg29iXibcQuqA5e1-OR5AO7O20=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC1NVu-c9dTjU2bzWYsECUxa/luontokuvat/kes%C3%A4/2/DSC33122-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADbzJRZPJlPCbQ_lpjCoSzwa/luontokuvat/kes%C3%A4/2/DSC33122.jpg)
 
-[![](https://lh3.googleusercontent.com/a4Gm1ihqAR0qHiGVpu9xnO1m9Bet0pvckowansFKGJE=w800)](https://lh3.googleusercontent.com/a4Gm1ihqAR0qHiGVpu9xnO1m9Bet0pvckowansFKGJE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACJvE64C3baV4rhY9ImWW47a/luontokuvat/kes%C3%A4/2/DSC33121-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAl7L0YoUKQ6gODLuha-LfFa/luontokuvat/kes%C3%A4/2/DSC33121.jpg)
 
-[![](https://lh3.googleusercontent.com/AdqEzOJt_MXA-jDDGZeSexdjrRfSw4xxeei4pN_wEWg=w800)](https://lh3.googleusercontent.com/AdqEzOJt_MXA-jDDGZeSexdjrRfSw4xxeei4pN_wEWg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB7UiddZkV3aZ5TYhBVIKlVa/luontokuvat/kes%C3%A4/2/DSC33115-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADfT-bvRh_8TEqLFDDUMrfNa/luontokuvat/kes%C3%A4/2/DSC33115.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA8y-lvghEqidDPOlW0XuU8a/luontokuvat/kes%C3%A4/2/DSC33119-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADAC1usNB_0WtMsQA_MxOxxa/luontokuvat/kes%C3%A4/2/DSC33119.jpg)
