--- a/luontokuvat/kesa/_posts/2015-07-14-00050.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00050.md
@@ -2,12 +2,16 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/XQ5fEHPEUoVm7xoQsYcJpcktEzj59mv5e87AIZVa4p0=w245-h163-no
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAARQPPo6UflJdpzc-IlL0Sga/luontokuvat/kes%C3%A4/2/DSC33690-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/HTpiK-GNd93d0xcjb3PJpx2kzv_LC5sLKcv0jGFzYeQ=w800)](https://lh3.googleusercontent.com/HTpiK-GNd93d0xcjb3PJpx2kzv_LC5sLKcv0jGFzYeQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADQZSy8yzyOmvmlxz5vsDgMa/luontokuvat/kes%C3%A4/2/DSC33676-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACee-DwI9koSPl-bXzzQJVOa/luontokuvat/kes%C3%A4/2/DSC33676.jpg)
 
-[![](https://lh3.googleusercontent.com/5OT1Kqq2pEXPqktNMla48GHHb_tETF2RcG0HFvoyI-8=w800)](https://lh3.googleusercontent.com/5OT1Kqq2pEXPqktNMla48GHHb_tETF2RcG0HFvoyI-8=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADwf7E15Udj_pFISjmTIZQwa/luontokuvat/kes%C3%A4/2/DSC33688-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACDxcQ-vjlwlWW4gQZGV-pKa/luontokuvat/kes%C3%A4/2/DSC33688.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB3N4KwHHM3hAER5lHeohapa/luontokuvat/kes%C3%A4/2/DSC33689-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACrvH562iSq5bjFybRSm_7za/luontokuvat/kes%C3%A4/2/DSC33689.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADcdEfJnR7wTsWCYJU33sB5a/luontokuvat/kes%C3%A4/2/DSC33690-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACR-qEor4ZawC7pMlvcMZEFa/luontokuvat/kes%C3%A4/2/DSC33690.jpg)
 
 *Kaislat*
